@@ -18,3 +18,4 @@ There is no day that ends without me being grateful for git-annex ;-)
 [[!meta author=mih]]
 [[!tag projects/datalad]]
 
+> [[fixed|done]] --[[Joey]]
